Add proxy.config into Angular Client for proxying 4200 port on 5000 of service, rewrote deploy.ps1 powershell script some change on configuration of web api cuz i dont now how to rout angular from service via start C# application, this trouble will investigate

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -7,8 +7,8 @@
 </div>
 <h2>Here are some links to help you start: </h2>
 <ul>
-  <li *ngFor="let value of values">
-    From controller: {{value}}
+  <li *ngFor="let heroe of heroes">
+    <span>From controller: {{heroe.name}}-{{heroe.age}}</span> 
   </li>
   <li>
     <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
