--- a/ClientApp/src/app/heroes/heroes.component.html
+++ b/ClientApp/src/app/heroes/heroes.component.html
@@ -1,4 +1,9 @@
   <li *ngFor="let hero of heroes"> 
     Hero from Back-End: {{hero.name}} 
-  </li>
-
+  </li>  
+<li>
+  <mat-list>
+      <mat-list-item *ngFor="let hero of heroes">Hero from Back-End: {{hero.name}}</mat-list-item>
+  </mat-list>  
+</li>
+  
